LU-5248 osd: NOT inject OBD_FAIL_FID_LOOKUP on dotdot

The namespace LFSCK may cannot rebuild the FID-in-dirent for dotdot
entry after the MDT restored from file-level backup, because there
is not enough space in the directory head area.

Lustre-change: http://review.whamcloud.com/9748
Lustre-commit: 7dec22d474faa50e1a7fb6b377ceb1310b76a8e8

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Iedf3b140a1dcc9fd77b40dbdf3dee52a44b5814b
Reviewed-on: http://review.whamcloud.com/11006
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Emoly Liu <emoly.liu@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>